kustomize/base/network-policies/minio-access-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-data-service
  namespace: minio-storage
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: system
      podSelector:
        matchLabels:
          app: faraz-data-service
    ports:
    - protocol: TCP
      port: 9000
    - protocol: TCP
      port: 9001
